tests/test_proof/bad/let_in_condition-empty.catala_en
## Test

```catala
declaration scope A:
  output x content boolean

scope A:
  definition x under condition
    let y equals false in
    y 
  consequence equals true
```

```catala-test-inline
$ catala Proof --disable_counterexamples
[WARNING] [A.x] This variable might return an empty error:
┌─⯈ let_in_condition-empty.catala_en:5.10-5.11:
└─┐
5 │   output x content boolean
  │          ‾
  └─ Test
Counterexample generation is disabled so none was generated.
```
